force-app/main/default/objects/Pricebook_Request_Line__c/Pricebook_Request_Line__c.object-meta.xml
<CustomObject>
    <description>A line item on a Pricebook Request. Each line represents a Product2 and its proposed Unit Price in the custom pricebook.</description>
    <label>Pricebook Request Line</label>
    <nameField>
        <label>Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricebook Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>