force-app/main/default/objects/Pricebook_Request_Line__c/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <description>Product attribute variant for this pricing line (e.g. 2kVA, 6kVA). When populated, this line represents account-specific pricing for this product+attribute combination. Null means base product pricing without variant differentiation.</description>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>