force-app/main/default/objects/Pricebook_Request_Line__c/fields/Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Price__c</fullName>
    <description>Minimum acceptable price for this product line. Used by VR to block submission of requests below floor price. Typically set at 70% of list price.</description>
    <inlineHelpText>Floor price for this product. Requested Unit Price cannot be below this amount. Auto-populated from the standard pricebook entry if available.</inlineHelpText>
    <label>Min Price (Floor)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>