force-app/main/default/objects/Pricebook_Request_Line__c/fields/Price_Variance__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance__c</fullName>
    <description>Formula: (Unit_Price - Min_Price) / Min_Price * 100. Negative = below floor price, requires escalated approval.</description>
    <formula>IF(AND(NOT(ISBLANK(Min_Price__c)), Min_Price__c &gt; 0, NOT(ISBLANK(Unit_Price__c))),
    ((Unit_Price__c - Min_Price__c) / Min_Price__c) * 100,
    NULL)</formula>
    <inlineHelpText>Percentage difference between requested Unit Price and Min Price. Negative means below floor. Calculated only when both Unit Price and Min Price are populated.</inlineHelpText>
    <label>Price Variance %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>