force-app/main/default/objects/Pricebook_Request_Line__c/fields/Pricebook_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Request__c</fullName>
    <label>Pricebook Request</label>
    <referenceTo>Pricebook_Request__c</referenceTo>
    <relationshipLabel>Pricebook Request Lines</relationshipLabel>
    <relationshipName>Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>