force-app/main/default/objects/Pricebook_Request_Line__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricebook Request Lines</relationshipLabel>
    <relationshipName>Pricebook_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>